# gtm-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  ANALYTICS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEMAP.md  DB_SCHEMA.md  DEPLOY.md  ENV.md  ERRORS.md  FEATURES.md  FUTURE_PLAN.md  MARKETING.md  OPENAPI.md  PRICING.md  SOCIAL.md  TECH_STACK.md  TESTS.md  openapi.yaml
ops/: DATA_RETENTION.md  EMAIL.md  EMPTY_STATES.md  EVENTS.md  FEATURE_FLAGS.md  MONITORING.md  PAYMENTS.md  PERF_BUDGET.md  RATE_LIMITS.md  STAGING.md
skills-md/: outbound-engine.md  sales-pipeline.md
src/gtm_forge/: __init__.py  __main__.py  cli.py  config.py  serve.py
src/gtm_forge/core/: __init__.py  breaker.py  context.py  costs.py  credentials.py  logging.py  notify.py  state.py  updater.py
src/gtm_forge/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/gtm_forge/skills/: __init__.py
src/gtm_forge/skills-md/: content-eval.md  content-ops.md  growth-experiments.md  lead-intel.md  seo-ops.md  video-clips.md
src/gtm_forge/skills/content_eval/: __init__.py  panel.py
src/gtm_forge/skills/contentops/: __init__.py  calendar.py
src/gtm_forge/skills/growth/: __init__.py  engine.py  stats.py
src/gtm_forge/skills/leads/: __init__.py  dossier.py  enrich.py
src/gtm_forge/skills/outbound/: __init__.py  icp.py  sequences.py
src/gtm_forge/skills/sales/: __init__.py  champions.py  health.py
src/gtm_forge/skills/seo/: __init__.py  brief.py
src/gtm_forge/skills/video/: __init__.py  pipeline.py
tests/: conftest.py  test_breaker.py  test_cli.py  test_config.py  test_content_eval.py  test_contentops.py  test_costs.py  test_leads.py  test_outbound.py  test_sales.py  test_seo.py  test_serve.py  test_state.py  test_stats.py  test_video.py
