[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtm-forge"
version = "0.1.0"
description = "Production-grade, config-driven GTM and AI marketing skills toolkit. One CLI, eight skills, zero lock-in."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GTM Forge contributors" }]
keywords = ["marketing", "gtm", "growth", "llm", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.16.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.40.0"]
serve = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
video = ["faster-whisper>=1.0.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/pisigmac/gtm-forge"
Repository = "https://github.com/pisigmac/gtm-forge"
Issues = "https://github.com/pisigmac/gtm-forge/issues"

[project.scripts]
gtm = "gtm_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_forge"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["docs", "ops", "skills-md"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C90"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"src/gtm_forge/cli.py" = ["B008"]  # typer.Option(...) in defaults is the Typer idiom

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["gtm_forge"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/gtm_forge"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
